--- a/ArcTouch Coding Challenge/Base.lproj/Main.storyboard
+++ b/ArcTouch Coding Challenge/Base.lproj/Main.storyboard
@@ -39,6 +39,7 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="84L-0l-V5R">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.21960784310000001" green="0.56470588239999997" blue="0.60784313729999995" alpha="1" colorSpace="calibratedRGB"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
