--- a/ArcTouch Coding Challenge/Base.lproj/Main.storyboard
+++ b/ArcTouch Coding Challenge/Base.lproj/Main.storyboard
@@ -19,7 +19,7 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="OfF-Ho-V09" kind="show" id="89i-eI-aj9"/>
+                                    <segue destination="Ppq-dn-4Jr" kind="show" id="89i-eI-aj9"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -55,10 +55,35 @@
                             <outlet property="delegate" destination="OfF-Ho-V09" id="RGl-Ii-pfm"/>
                         </connections>
                     </tableView>
+                    <navigationItem key="navigationItem" id="zNh-oA-4cK">
+                        <barButtonItem key="rightBarButtonItem" title="Item" id="bl6-Wp-bdh">
+                            <connections>
+                                <segue destination="luF-SX-FFn" kind="show" id="kwx-Nz-35b"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5kV-2c-bMP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="838" y="-462"/>
+            <point key="canvasLocation" x="1548" y="-462"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="mwQ-Ej-8gf">
+            <objects>
+                <viewController id="luF-SX-FFn" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="rjZ-X4-LOW"/>
+                        <viewControllerLayoutGuide type="bottom" id="XxQ-LF-evK"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Q4x-8w-GOa">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="EaE-pO-n5L" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2249" y="-462"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="yPa-MZ-Yf6">
@@ -78,6 +103,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2Ua-Ui-Iyb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="124" y="-1194"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="7Kh-BU-fro">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Ppq-dn-4Jr" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="iqN-mT-U1g">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="OfF-Ho-V09" kind="relationship" relationship="rootViewController" id="zRS-9G-hhN"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vGq-PV-lCR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="838" y="-462"/>
         </scene>
     </scenes>
 </document>
